--- a/modal/modal.html
+++ b/modal/modal.html
@@ -8,12 +8,6 @@
 
 
     <link rel="stylesheet" type="text/css" href="static/css/modal.css" >
-<<<<<<< HEAD
-=======
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title></title> -->
-  </head>
->>>>>>> master
   <body>
     <container>
 
@@ -23,7 +17,7 @@
 
 
 <div class="modal modal-nutrition fade full-height from-right" id="panel-modal2" tabindex="-1" role="dialog" aria-hidden="true">
-<div class="modal-dialog">
+  <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <div class="row">
@@ -105,6 +99,7 @@
             <button type="button" class="btn btn-flat-primary" data-dismiss="modal">Add it, please!</button>
         </div>
     </div>
+</div>
 </div>
 
 
