--- a/index.html
+++ b/index.html
@@ -3,46 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title>Meal Engine</title>
-
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-     <!-- JS  -->
-    <script type="text/javascript" src="/meal-engine/logoRanGen.js" > </script>
-    <!-- jquery -->
-    <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+     <script type="text/javascript" src="/meal-engine/app.js" > </script>
+     <script type="text/javascript" src="/Users/ashley/Desktop/techtonica-labs/meal-engine" > </script>
   </head>
+
   <body>
     <div>
       <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-              <span name="imageForm">
-                  <input type="image" src="https://emojipedia-us.s3.amazonaws.com/thumbs/160/facebook/65/fork-and-knife_1f374.png" name="canvas" onClick="displayImage()" width= "35" value="Display Random Image">
-              </span>
-            </a>
-          </div>
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Team <span class="caret"></span></a>
-              <ul class="dropdown-menu">
+            <a class="navbar-brand" href="#">Meal-Engine</a>
+            </div>
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Team <span  class="caret"></span></a>
+                <ul class="dropdown-menu">
                 <li><a href="https://avatars0.githubusercontent.com/u/16566442?s=460&v=4">Ashley</a></li>
                 <li><a href="https://avatars0.githubusercontent.com/u/22802127?s=460&v=4">Stephanie</a></li>
                 <li><a href="https://avatars0.githubusercontent.com/u/16006190?s=460&v=4">Lian</a></li>
               </ul>
-              </div>
-          </nav>
-      </div>
+                  </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
-  <div class="container">
-    <h1>What should you eat today?</h1>
-      <div id="test"> </div>
+      <div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <span name="imageForm">
+                <input type="image" src="https://emojipedia-us.s3.amazonaws.com/thumbs/160/facebook/65/fork-and-knife_1f374.png" name="canvas" onClick="displayImage()" width= "50" value="Display Random Image">
+              </span>
+            </div>
+            <div class="col-md-9">
+              <h1>What should you eat today?</h1>
+                <div id="test"> </div>
+            </div>
+        </div>
+    </div>
   </div>
 
-  <footer>
-  </footer>
-
+                <!-- jquery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script type="text/javascript" src="/meal-engine/logoRanGen.js" > </script>
-   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+
+
   </body>
 </html>
