--- a/modal/modal.html
+++ b/modal/modal.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="utf-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-2.2.4.js"
+      integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+      crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 
     <link rel="stylesheet" type="text/css" href="static/css/modal.css" >
   <body>
     <container>
+
+
+
+
 
 <div class="btn-group">
   <a class="btn btn-red btn-ripple" data-toggle="modal" data-target="#panel-modal2">Add Recipe</a>
@@ -28,17 +35,6 @@
         </div>
         <div class="modal-body">
             <div class="form-group">
-                <div class="row margin-top-30">
-                    <div class="col-md-3">Category:</div>
-                    <div class="col-md-9">
-                        <select class="selectpicker" data-width="100%">
-                            <option>- Select -</option>
-                            <option>Dishes</option>
-                            <option>Desserts</option>
-                            <option>Snacks</option>
-                        </select>
-                    </div>
-                </div>
                 <div class="row margin-top-30">
                     <div class="col-md-3">Title:</div>
                     <div class="col-md-9">
@@ -72,7 +68,7 @@
                     </div>
                 </div>
                 <div class="row margin-top-30">
-                    <div class="col-md-3">Image:</div>
+                    <div class="col-md-3">Link:</div>
                     <div class="col-md-9">
                         <div class="control-group">
                             <div class="controls">
